corrected positioning with hand logo into the footer and aligning 'clay cosmetics text with the footer logo

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 
@@ -18,13 +18,18 @@ footer{
     background-color: white;
     width: 100%;
     padding: 25px;
-    position:fixed;bottom:0;left:0;right:0;height:30px;
+    position:fixed;bottom:0;left:0;right:0;height:100px;
     
 }
-
 .handlogo{
-    position: left;
-    width: 20%;
-    height: 20%;
+    position:fixed;bottom:0;left:20px;right:0;height:60px;
+
+}
+
+.clayfooter{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position:fixed;bottom:0;left:20px;right:0;height:80px;
+    
+
 }
 
